analyzer_output.txt
Starting copying files to remote machine.
Copying 'C:\Users\omark\Documents\obos\analyzer_output.txt' to '/home/omar/.vs/obos/analyzer_output.txt'.
Copying 'C:\Users\omark\Documents\obos\kernel\elf.c' to '/home/omar/.vs/obos/kernel/elf.c'.
Copying 'C:\Users\omark\Documents\obos\kernel\keyboard.c' to '/home/omar/.vs/obos/kernel/keyboard.c'.
Copying 'C:\Users\omark\Documents\obos\kernel\multitasking.c' to '/home/omar/.vs/obos/kernel/multitasking.c'.
Finished copying files (elapsed time 00h:00m:00s:490ms).
 cd /home/omar/.vs/obos/out/build/linux-debug;/usr/bin/cmake --build /home/omar/.vs/obos/out/build/linux-debug --target oboskrnl_analyzer --config Debug;

[1/16] Building C object kernel/CMakeFiles/oboskrnl_analyzer.dir/multitasking.c.o
FAILED: kernel/CMakeFiles/oboskrnl_analyzer.dir/multitasking.c.o 
i686-elf-gcc   -g -Wall -Werror -Wno-error=misleading-indentation -Wno-builtin-declaration-mismatch -Wno-error=unknown-pragmas -fanalyzer -MD -MT kernel/CMakeFiles/oboskrnl_analyzer.dir/multitasking.c.o -MF kernel/CMakeFiles/oboskrnl_analyzer.dir/multitasking.c.o.d -o kernel/CMakeFiles/oboskrnl_analyzer.dir/multitasking.c.o -c /home/omar/.vs/obos/kernel/multitasking.c
In file included from /home/omar/.vs/obos/kernel/multitasking.c:17:
/home/omar/.vs/obos/kernel/list/list.h:30:10: fatal error: liballoc/liballoc_1_1.h: No such file or directory
   30 | #include <liballoc/liballoc_1_1.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
[2/16] Building C object kernel/CMakeFiles/oboskrnl_analyzer.dir/paging.c.o
FAILED: kernel/CMakeFiles/oboskrnl_analyzer.dir/paging.c.o 
i686-elf-gcc   -g -Wall -Werror -Wno-error=misleading-indentation -Wno-builtin-declaration-mismatch -Wno-error=unknown-pragmas -fanalyzer -MD -MT kernel/CMakeFiles/oboskrnl_analyzer.dir/paging.c.o -MF kernel/CMakeFiles/oboskrnl_analyzer.dir/paging.c.o.d -o kernel/CMakeFiles/oboskrnl_analyzer.dir/paging.c.o -c /home/omar/.vs/obos/kernel/paging.c
/home/omar/.vs/obos/kernel/paging.c: In function 'liballoc_alloc':
/home/omar/.vs/obos/kernel/paging.c:562:19: error: too few arguments to function 'kalloc_pages'
  562 |     PVOID block = kalloc_pages(nPages);
      |                   ^~~~~~~~~~~~
/home/omar/.vs/obos/kernel/paging.c:368:7: note: declared here
  368 | void* kalloc_pages(SIZE_T nPages, BOOL isReadOnly)
      |       ^~~~~~~~~~~~
[3/16] Building C object kernel/CMakeFiles/oboskrnl_analyzer.dir/bitfields.c.o
[4/16] Building C object kernel/CMakeFiles/oboskrnl_analyzer.dir/keyboard.c.o
[5/16] Building C object kernel/CMakeFiles/oboskrnl_analyzer.dir/kmain.c.o
FAILED: kernel/CMakeFiles/oboskrnl_analyzer.dir/kmain.c.o 
i686-elf-gcc   -g -Wall -Werror -Wno-error=misleading-indentation -Wno-builtin-declaration-mismatch -Wno-error=unknown-pragmas -fanalyzer -MD -MT kernel/CMakeFiles/oboskrnl_analyzer.dir/kmain.c.o -MF kernel/CMakeFiles/oboskrnl_analyzer.dir/kmain.c.o.d -o kernel/CMakeFiles/oboskrnl_analyzer.dir/kmain.c.o -c /home/omar/.vs/obos/kernel/kmain.c
/home/omar/.vs/obos/kernel/kmain.c: In function 'kmain_thread':
/home/omar/.vs/obos/kernel/kmain.c:203:20: error: use of NULL where non-null expected [CWE-476] [-Werror=analyzer-null-argument]
  203 |         int size = sprintf(NULLPTR, format, "\"fat\"", /*GetSymbolFromFile("g_driverErrorCode")*/0);
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  'kmain_thread': events 1-3
    |
    |  192 |     switch (driverReturnValue)
    |      |     ^~~~~~
    |      |     |
    |      |     (1) following 'case 2:' branch...
    |......
    |  200 |     case 2:
    |      |     ~~~~
    |      |     |
    |      |     (2) ...to here
    |......
    |  203 |         int size = sprintf(NULLPTR, format, "\"fat\"", /*GetSymbolFromFile("g_driverErrorCode")*/0);
    |      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    |      |                    |
    |      |                    (3) argument 1 NULL where non-null expected
    |
In file included from /home/omar/.vs/obos/kernel/kmain.c:11:
/home/omar/.vs/obos/kernel/klog.h:27:5: note: argument 1 of 'sprintf' must be non-null
   27 | int sprintf(STRING output, CSTRING format, ...) attribute(format(printf, 2, 3));
      |     ^~~~~~~
cc1: all warnings being treated as errors
[6/16] Building C object kernel/CMakeFiles/oboskrnl_analyzer.dir/liballoc/liballoc_1_1.c.o
ninja: build stopped: subcommand failed.


Build failed.